--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
 
     <string name="home_second">Home Second</string>
     <string name="edit_text_hint">Some text</string>
+    <string name="bottom_sheet_text">Потяни вверх</string>
 </resources>
