--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,15 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Edit text</string>
-    <string name="menu_gallery">Snack Bar</string>
-    <string name="menu_slideshow">Bottom Sheet</string>
+    <string name="menu_edit_text">Edit text</string>
+    <string name="menu_snack_bar">FAB and SnackBar</string>
+    <string name="menu_bottom_sheet">Bottom Sheet</string>
+    <string name="menu_buttons">Buttons</string>
 
     <string name="home_second">Home Second</string>
     <string name="edit_text_hint">Some text</string>
     <string name="bottom_sheet_text">Потяни вверх</string>
+    <string name="button_text">BUTTON</string>
+    <string name="flat_button_text_view">Flat buttons example</string>
+    <string name="raised_button_text_view">Raised buttons example</string>
 </resources>
